# chatgpt-assistant

./: Cargo.toml  README.md
src/: config.rs  gpt.rs  main.rs
