[package]
name = "chatgpt-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
dotenv = "0.15.0"
reqwest = {version="0.11.14", features = ["json"]}
serde = {version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"
termion = "2.0.1"
tokio = {version="1.26.0", features=["full"]}
