[package]
name = "chatgpt-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
clap = { version = "4.1.11", features = ["derive"] }
dirs = "4.0.0"
dotenv = "0.15.0"
reqwest = {version="0.11.14", features = ["json"]}
serde = {version="1.0.152", features = ["derive"]}
serde_yaml = "0.9.19"
termion = "2.0.1"
tokio = {version="1.26.0", features=["full"]}
